src/test/resources/invalid_tests/MissingPoolingArgument1.cnna
architecture MissingPoolingArgument1{
    def input in
    def output out
    
    in ->
    convolution(filters=64, kernel=5)
    pooling.max()
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}